<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/sections_space"
    tools:background="#2196F3"
    tools:divider="@drawable/shape_reader_divider"
    tools:parentTag="android.widget.LinearLayout"
    tools:showDividers="middle">

    <com.kidscademy.atlas.view.ReaderIntroView
        android:id="@+id/reader_intro_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone" />

    <com.kidscademy.atlas.view.ReaderInfoBoxView
        android:id="@+id/reader_infobox_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_T40">

        <View
            android:id="@+id/reader_infobox_vr"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/vertical_rule_start_margin"
            android:background="@color/rule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reader_infobox_vr"
            app:layout_constraintTop_toTopOf="parent">

            <include
                layout="@layout/reader_infobox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </com.kidscademy.atlas.view.ReaderInfoBoxView>

    <com.kidscademy.atlas.view.DescriptionPhoneView
        android:id="@+id/reader_description_column1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_paragraph_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="gone"
        app:paragraphsCount="@integer/reader_paragraphs_count" />

    <com.kidscademy.atlas.view.ReaderConservationView
        android:id="@+id/reader_conservation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_T40" />

    <com.kidscademy.atlas.view.ReaderFeaturesView
        android:id="@+id/reader_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.kidscademy.atlas.view.DescriptionPhoneView
        android:id="@+id/reader_description_column2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_paragraph_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:paragraphsCount="@integer/reader_paragraphs_count" />

    <com.kidscademy.atlas.view.ReaderFeaturedView
        android:id="@+id/reader_featured_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.kidscademy.atlas.view.DescriptionPhoneView
        android:id="@+id/reader_description_column3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/shape_paragraph_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:paragraphsCount="@integer/reader_paragraphs_count" />

    <com.kidscademy.atlas.view.ReaderContextualView
        android:id="@+id/reader_contextual_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.kidscademy.atlas.view.ReaderFactsView
        android:id="@+id/reader_facts_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <com.kidscademy.atlas.view.ReaderRelatedView
        android:id="@+id/reader_related_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.kidscademy.atlas.view.ReaderLinksView
        android:id="@+id/reader_links_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</merge>